# toy-hdl

./: .bazeliskrc  .bazelrc  BUILD  MODULE.bazel  README.md  requirements.in  requirements.txt
cpu/: BUILD  alu.h  alu_test.cc  compiler.cc  compiler.h  compiler_test.cc  decoder.h  decoder_test.cc  eval.cc  eval.h  eval_test.cc  export.cc  export.h  flags.cc  flags.h  format.proto  fpga.h  fpga_mapping.h  fpga_mapping_test.cc  gate_lib.cc  gate_lib.h  gate_lib_test.cc  gate_opt.cc  gate_opt.h  gate_opt_test.cc  graph.cc  graph.h  graph_test.cc  lower_gates.cc  lower_gates.h  main.cc  pc_gen.h  pcgen_test.cc  print.cc  print.h  register_file.h  register_file_test.cc  transistor_lib.cc  transistor_lib.h  transistor_lib_test.cc  (+4 more)
export/: BUILD  export_kicad.py  place_vias.py  placer_kicad.py  util.py
isa/: BUILD  asm_dispatch.h  assembler.cc  assembler.h  emulator.cc  emulator.h  emulator_test.cc  encdec.h  encdec_test.cc  instructions.cc  instructions.h  isa.cc  isa_types.h
jank/: BUILD  README.md  ast.h  context.cc  context.h  lexer.cc  lexer.h  lexer_test.cc  parser.cc  parser.h  parser_test.cc  print.cc  print.h
