bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "abseil-py", version = "2.4.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "34.1")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)

use_repo(pip, "pip_deps")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "reflect_cpp",
    build_file_content = """
cc_library(
    name = "reflect_cpp",
    hdrs = glob(["include/**/*.hpp", "include/**/*.h"]),
    includes = ["include"],
    visibility = ["//visibility:public"],
)
""",
    strip_prefix = "reflect-cpp-0.25.0",
    urls = ["https://github.com/getml/reflect-cpp/archive/refs/tags/v0.25.0.tar.gz"],
)

# googletest 1.17.0 does not support bazel 9.0.
#git_override(
#    module_name = "googletest",
#    branch = "main",
#    remote = "https://github.com/google/googletest.git",
#)

# absl 20260107 does not support bazel 9.0
#git_override(
#    module_name = "abseil-cpp",
#    branch = "master",
#    remote = "https://github.com/abseil/abseil-cpp",
#)

